--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ body {
         <div class="team-member">
           <div class="member-name">Investor</div>
           <div class="member-quote">
-            <span class="confident-text">Ahmed Waleed</span>
+            <span class="confident-text"></span>
           </div>
         </div>
       </div>
@@ -363,3 +363,4 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
