--- a/todo-list.html
+++ b/todo-list.html
@@ -334,6 +334,37 @@
       color: rgba(255, 255, 255, 0.7);
       margin-top: 5px;
     }
+    /* Pomodoro Styles */
+    .pomodoro-container {
+      background: rgba(255, 255, 255, 0.05);
+      border: 2px solid rgba(0, 212, 255, 0.2);
+      border-radius: 16px;
+      padding: 20px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    .pomodoro-container h2 {
+      color: var(--accent);
+      margin-bottom: 15px;
+    }
+    #timerDisplay {
+      font-size: 48px;
+      font-weight: 700;
+      color: var(--success);
+      margin-bottom: 15px;
+      text-shadow: 0 0 10px rgba(0, 255, 157, 0.5);
+    }
+    .pomodoro-controls {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 10px;
+    }
+    #pomoStatus {
+      font-size: 18px;
+      color: var(--warning);
+      font-weight: 600;
+    }
     /* Bottom Dock Styles */
     #bottom-dock {
       position: fixed;
@@ -359,16 +390,13 @@
       font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
       text-transform: uppercase;
       letter-spacing: 3px;
-      background: linear-gradient(90deg, #f9ce34, #ee2a7b, #6228d7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
+      color: aqua;
       text-decoration: none;
       cursor: pointer;
       transition: all 0.4s ease;
-      text-shadow: 0 2px 10px rgba(238, 42, 123, 0.4);
+      text-shadow: 0 2px 10px rgba(0, 255, 255, 0.4);
       padding: 0 15px;
+      background: none;
     }
     .kalmeron-link:hover {
       transform: scale(1.08);
@@ -432,6 +460,17 @@
         <h1>📊 تتبع التقدم الدراسي</h1>
         <p>أكمل المهام الفرعية وتابع تقدمك</p>
       </div>
+      <!-- Pomodoro Section -->
+      <div class="pomodoro-container">
+        <h2>تقنية بومودورو</h2>
+        <div id="timerDisplay">25:00</div>
+        <div class="pomodoro-controls">
+          <button class="btn btn-primary" id="startPomo">ابدأ</button>
+          <button class="btn" id="pausePomo">إيقاف</button>
+          <button class="btn" id="resetPomo">إعادة</button>
+        </div>
+        <span id="pomoStatus">عمل</span>
+      </div>
       <div class="execution-container">
         <div class="tasks-container" id="tasksContainer"></div>
         <div class="stats-panel">
@@ -490,6 +529,20 @@
     const totalCount = document.getElementById('totalCount');
     const resetBtn = document.getElementById('resetBtn');
     const backBtn = document.getElementById('backBtn');
+
+    // Pomodoro Variables
+    let timerInterval;
+    let isRunning = false;
+    let currentTime = 25 * 60; // 25 minutes in seconds
+    let isWork = true; // true for work, false for break
+    const workTime = 25 * 60;
+    const breakTime = 5 * 60;
+    const timerDisplay = document.getElementById('timerDisplay');
+    const pomoStatus = document.getElementById('pomoStatus');
+    const startPomo = document.getElementById('startPomo');
+    const pausePomo = document.getElementById('pausePomo');
+    const resetPomo = document.getElementById('resetPomo');
+
     function init() {
       loadData();
       attachEvents();
@@ -497,6 +550,7 @@
       const savedPhase = localStorage.getItem(phaseKey);
       if (savedPhase === 'execution' && tasks.length > 0) startExecution();
     }
+
     function loadData() {
       const saved = localStorage.getItem(tasksKey);
       if (saved) {
@@ -511,9 +565,11 @@
       }
       emptyState.style.display = tasks.length ? 'none' : 'block';
     }
+
     function saveData() {
       localStorage.setItem(tasksKey, JSON.stringify(tasks));
     }
+
     function attachEvents() {
       addTaskBtn.addEventListener('click', addTask);
       taskInput.addEventListener('keypress', (e) => e.key === 'Enter' && addTask());
@@ -521,7 +577,13 @@
       resetBtn.addEventListener('click', resetProgress);
       backBtn.addEventListener('click', goBack);
       window.addEventListener('beforeunload', saveData);
+
+      // Pomodoro Events
+      startPomo.addEventListener('click', startTimer);
+      pausePomo.addEventListener('click', pauseTimer);
+      resetPomo.addEventListener('click', resetTimer);
     }
+
     function addTask() {
       const name = taskInput.value.trim();
       if (!name) return;
@@ -535,6 +597,7 @@
       renderSetup();
       saveData();
     }
+
     function deleteTask(id) {
       if (confirm('هل تريد حذف هذه المهمة؟')) {
         tasks = tasks.filter(t => t.id !== id);
@@ -542,6 +605,7 @@
         saveData();
       }
     }
+
     function addSubtask(taskId, input) {
       const name = input.value.trim();
       if (!name) return;
@@ -553,6 +617,7 @@
         saveData();
       }
     }
+
     function deleteSubtask(taskId, index) {
       const task = tasks.find(t => t.id === taskId);
       if (task) {
@@ -561,6 +626,7 @@
         saveData();
       }
     }
+
     function renderSetup() {
       const hasSubtasks = tasks.length > 0 && tasks.every(t => t.subtasks.length > 0);
       startBtn.disabled = !hasSubtasks;
@@ -594,13 +660,16 @@
         </div>
       `).join('');
     }
+
     function startExecution() {
       localStorage.setItem(phaseKey, 'execution');
       setupPhase.classList.remove('active');
       executionPhase.classList.add('active');
       renderExecution();
       updateProgress();
+      resetTimer(); // Reset Pomodoro on start
     }
+
     function renderExecution() {
       const total = tasks.reduce((sum, task) => sum + task.subtasks.length, 0);
       totalCount.textContent = total;
@@ -626,14 +695,17 @@
         `;
       }).join('');
     }
+
     function toggleSubtask(taskId, index, checked) {
       const task = tasks.find(t => t.id === taskId);
       if (task) {
         task.subtasks[index].completed = checked;
         saveData();
         updateProgress();
+        renderExecution(); // Re-render to update progress bars
       }
     }
+
     function updateProgress() {
       let completed = 0, total = 0;
       tasks.forEach(task => {
@@ -653,6 +725,7 @@
       const offset = circumference * (1 - percent / 100);
       progressRing.style.strokeDashoffset = offset;
     }
+
     function resetProgress() {
       if (confirm('هل تريد إعادة تعيين جميع المهام؟')) {
         tasks.forEach(task => task.subtasks.forEach(st => st.completed = false));
@@ -661,12 +734,63 @@
         renderExecution();
       }
     }
+
     function goBack() {
       localStorage.setItem(phaseKey, 'setup');
       executionPhase.classList.remove('active');
       setupPhase.classList.add('active');
       renderSetup();
     }
+
+    // Pomodoro Functions
+    function updateDisplay() {
+      const minutes = Math.floor(currentTime / 60);
+      const seconds = currentTime % 60;
+      timerDisplay.textContent = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+      pomoStatus.textContent = isWork ? 'عمل' : 'راحة';
+      timerDisplay.style.color = isWork ? 'var(--success)' : 'var(--warning)';
+    }
+
+    function startTimer() {
+      if (!isRunning) {
+        isRunning = true;
+        timerInterval = setInterval(() => {
+          if (currentTime > 0) {
+            currentTime--;
+            updateDisplay();
+          } else {
+            clearInterval(timerInterval);
+            isRunning = false;
+            if (isWork) {
+              alert('انتهى وقت العمل! ابدأ الراحة.');
+              isWork = false;
+              currentTime = breakTime;
+            } else {
+              alert('انتهت الراحة! ابدأ جولة عمل جديدة.');
+              isWork = true;
+              currentTime = workTime;
+            }
+            updateDisplay();
+          }
+        }, 1000);
+      }
+    }
+
+    function pauseTimer() {
+      if (isRunning) {
+        clearInterval(timerInterval);
+        isRunning = false;
+      }
+    }
+
+    function resetTimer() {
+      clearInterval(timerInterval);
+      isRunning = false;
+      isWork = true;
+      currentTime = workTime;
+      updateDisplay();
+    }
+
     window.deleteTask = deleteTask;
     window.addSubtask = addSubtask;
     window.deleteSubtask = deleteSubtask;
