Change greeting from 'Hello' to 'Goodbye'

--- a/todo-list.html
+++ b/todo-list.html
@@ -334,6 +334,7 @@
       color: rgba(255, 255, 255, 0.7);
       margin-top: 5px;
     }
+
     /* Pomodoro Styles */
     .pomodoro-container {
       background: rgba(255, 255, 255, 0.05);
@@ -365,6 +366,39 @@
       color: var(--warning);
       font-weight: 600;
     }
+
+    /* Settings Section */
+    .pomodoro-settings {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 15px;
+      flex-wrap: wrap;
+    }
+    .setting-input {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5px;
+    }
+    .setting-input label {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.8);
+    }
+    .setting-input input {
+      width: 80px;
+      padding: 8px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(0, 212, 255, 0.3);
+      border-radius: 8px;
+      color: white;
+    }
+    .setting-input input:focus {
+      outline: none;
+      border-color: var(--accent);
+    }
+
     /* Bottom Dock Styles */
     #bottom-dock {
       position: fixed;
@@ -427,6 +461,10 @@
         font-size: 22px;
         letter-spacing: 2px;
       }
+      .pomodoro-settings {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
@@ -454,12 +492,14 @@
         </button>
       </div>
     </div>
+
     <!-- Execution Phase -->
     <div class="phase" id="executionPhase">
       <div class="header">
         <h1>📊 تتبع التقدم الدراسي</h1>
         <p>أكمل المهام الفرعية وتابع تقدمك</p>
       </div>
+
       <!-- Pomodoro Section -->
       <div class="pomodoro-container">
         <h2>تقنية بومودورو</h2>
@@ -469,8 +509,19 @@
           <button class="btn" id="pausePomo">إيقاف</button>
           <button class="btn" id="resetPomo">إعادة</button>
         </div>
+        <div class="pomodoro-settings">
+          <div class="setting-input">
+            <label>وقت العمل (دقيقة)</label>
+            <input type="number" id="workMinutes" min="1" value="25" />
+          </div>
+          <div class="setting-input">
+            <label>وقت الراحة (دقيقة)</label>
+            <input type="number" id="breakMinutes" min="1" value="5" />
+          </div>
+        </div>
         <span id="pomoStatus">عمل</span>
       </div>
+
       <div class="execution-container">
         <div class="tasks-container" id="tasksContainer"></div>
         <div class="stats-panel">
@@ -506,10 +557,12 @@
       </div>
     </div>
   </div>
+
   <!-- Navigation Dock -->
   <div id="bottom-dock">
     <a class="kalmeron-link" onclick="history.back();">Kalmeron AI</a>
   </div>
+
   <script>
     let tasks = [];
     const tasksKey = 'studyTasks';
@@ -530,18 +583,22 @@
     const resetBtn = document.getElementById('resetBtn');
     const backBtn = document.getElementById('backBtn');
 
-    // Pomodoro Variables
-    let timerInterval;
-    let isRunning = false;
-    let currentTime = 25 * 60; // 25 minutes in seconds
-    let isWork = true; // true for work, false for break
-    const workTime = 25 * 60;
-    const breakTime = 5 * 60;
+    // Pomodoro Elements
     const timerDisplay = document.getElementById('timerDisplay');
     const pomoStatus = document.getElementById('pomoStatus');
     const startPomo = document.getElementById('startPomo');
     const pausePomo = document.getElementById('pausePomo');
     const resetPomo = document.getElementById('resetPomo');
+    const workMinutesInput = document.getElementById('workMinutes');
+    const breakMinutesInput = document.getElementById('breakMinutes');
+
+    // Pomodoro State
+    let timerInterval;
+    let isRunning = false;
+    let currentTime = 25 * 60;
+    let isWork = true;
+    let workTime = 25 * 60;
+    let breakTime = 5 * 60;
 
     function init() {
       loadData();
@@ -564,10 +621,19 @@
         }
       }
       emptyState.style.display = tasks.length ? 'none' : 'block';
+
+      // Load Pomodoro settings
+      const savedWork = localStorage.getItem('pomoWorkMinutes');
+      const savedBreak = localStorage.getItem('pomoBreakMinutes');
+      if (savedWork) workMinutesInput.value = parseInt(savedWork) || 25;
+      if (savedBreak) breakMinutesInput.value = parseInt(savedBreak) || 5;
+      applyPomodoroSettings();
     }
 
     function saveData() {
       localStorage.setItem(tasksKey, JSON.stringify(tasks));
+      localStorage.setItem('pomoWorkMinutes', workMinutesInput.value);
+      localStorage.setItem('pomoBreakMinutes', breakMinutesInput.value);
     }
 
     function attachEvents() {
@@ -582,6 +648,20 @@
       startPomo.addEventListener('click', startTimer);
       pausePomo.addEventListener('click', pauseTimer);
       resetPomo.addEventListener('click', resetTimer);
+      workMinutesInput.addEventListener('change', applyPomodoroSettings);
+      breakMinutesInput.addEventListener('change', applyPomodoroSettings);
+    }
+
+    function applyPomodoroSettings() {
+      const w = parseInt(workMinutesInput.value) || 25;
+      const b = parseInt(breakMinutesInput.value) || 5;
+      workTime = Math.max(1, w) * 60;
+      breakTime = Math.max(1, b) * 60;
+      if (!isRunning) {
+        isWork = true;
+        currentTime = workTime;
+        updateDisplay();
+      }
     }
 
     function addTask() {
@@ -667,7 +747,7 @@
       executionPhase.classList.add('active');
       renderExecution();
       updateProgress();
-      resetTimer(); // Reset Pomodoro on start
+      resetTimer();
     }
 
     function renderExecution() {
@@ -702,7 +782,7 @@
         task.subtasks[index].completed = checked;
         saveData();
         updateProgress();
-        renderExecution(); // Re-render to update progress bars
+        renderExecution();
       }
     }
 
@@ -795,6 +875,7 @@
     window.addSubtask = addSubtask;
     window.deleteSubtask = deleteSubtask;
     window.toggleSubtask = toggleSubtask;
+
     init();
   </script>
 </body>
